# PiAlarm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  README.md  apt-requirement.txt
cmake/: Dependencies.cmake
include/: Application.h
include/common/: Observable.hpp  Observer.h  WeatherCondition.h
include/controller/: AlarmController.h
include/display/: DisplayConfig.hpp  ViewOutputConfig.h
include/gfx/: Bitmap.h  Canvas.h  Glyph.h  IBuffer.h  IFont.h  Pictogram.h  SDD1322Buffer.h  TrueTypeFont.h  TrueTypeFontCache.h  Types.h
include/hardware/: BME280.h  GPIO.h  I2C.h  SCD41.h  SPI.h  SSD1322.h
include/input/: HasInputEventHandler.h  InputEvent.h  InputManager.h
include/logging/: HasLogger.h
include/media/: AudioTypes.h  BassContext.hpp  MusicPlayer.h  MusicService.h
include/model/: Alarm.hpp  AlarmData.hpp  AlarmState.hpp  AlarmsData.hpp  BaseModelData.hpp  CO2Data.hpp  ClockData.h  ClockData.hpp  CurrentIndoorData.hpp  CurrentWeatherData.h  TemperatureSensorData.hpp  Time.h  WeatherData.h  WeatherData.hpp
include/model/manager/: AlarmManager.h
include/provider/: WeatherApiClient.h
include/service/: BME280Service.h  BaseService.h  CurrentIndoorService.h  IService.h  SCD41Service.h  TimeUpdateService.h  WeatherApiService.h
include/system/: TerminationService.h
include/trigger/: AlarmSoundTrigger.h
include/utils/: LogUtils.h  ViewFormatUtils.hpp  ViewUtils.hpp  WeatherUtils.hpp  argsUtils.hpp  consoleDisplayUtils.hpp  consoleUtils.h  consoleUtils.hpp
include/view/: AbstractMainClockView.h  AbstractObserverView.h  IView.h
include/view/cli/: BaseCliView.h  MainClockView.h
include/view/console/: MainClockView.h
include/view/manager/: ViewManager.h
include/view/ssd1322/: AlarmsSettingsView.h  MainClockView.h
src/: Application.cpp  CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  HasWorker.cpp  HasWorker.h  Observable.hpp
src/controller/: AlarmController.cpp  CMakeLists.txt
src/display/: CMakeLists.txt  ViewOutputConfig.h
src/gfx/: Bitmap.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Glyph.h  IBuffer.h  IFont.h  Pictogram.cpp  Pictogram.h  SDD1322Buffer.cpp  SDD1322Buffer.h  TrueTypeFont.cpp  TrueTypeFont.h  TrueTypeFontCache.cpp  TrueTypeFontCache.h
src/hardware/: BME280.cpp  BME280.h  CMakeLists.txt  GPIO.cpp  GPIO.h  I2C.cpp  I2C.h  SCD41.cpp  SCD41.h  SPI.cpp  SPI.h  SSD1322.cpp  SSD1322.h
src/input/: CMakeLists.txt  HasInputEventHandler.h  InputEvent.h  InputManager.cpp  InputManager.h
src/logging/: CMakeLists.txt  HasLogger.cpp  HasLogger.h
src/media/: AudioTypes.h  BassContext.hpp  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  MusicService.cpp  MusicService.h
src/model/: Alarm.cpp  Alarm.hpp  AlarmData.cpp  AlarmState.cpp  AlarmState.hpp  AlarmsData.cpp  AlarmsData.hpp  BaseModelData.hpp  CMakeLists.txt  CO2Data.cpp  CO2Data.hpp  ClockData.cpp  ClockData.hpp  CurrentIndoorData.cpp  CurrentIndoorData.hpp  CurrentWeatherData.cpp  CurrentWeatherData.h  TemperatureSensorData.cpp  Time.cpp  WeatherData.cpp
src/model/manager/: AlarmManager.cpp  AlarmManager.h  CMakeLists.txt
src/provider/: CMakeLists.txt  WeatherApiClient.cpp  WeatherApiClient.h
src/service/: BME280Service.cpp  BME280Service.h  BaseService.cpp  BaseService.h  CMakeLists.txt  CurrentIndoorService.cpp  IService.h  SCD41Service.cpp  SCD41Service.h  TimeUpdateService.cpp  TimeUpdateService.h  WeatherApiService.cpp  WeatherApiService.h
src/system/: CMakeLists.txt  TerminationService.cpp  TerminationService.h
src/trigger/: AlarmSoundTrigger.cpp  CMakeLists.txt
src/utils/: CMakeLists.txt  ViewFormatUtils.hpp  WeatherUtils.hpp  argsUtils.hpp  consoleUtils.hpp
src/view/: AbstractMainClockView.cpp  AbstractMainClockView.h  AbstractObserverView.h  CMakeLists.txt  IView.h
src/view/cli/: CMakeLists.txt  MainClockView.cpp
src/view/console/: CMakeLists.txt  MainClockView.cpp
src/view/manager/: CMakeLists.txt  ViewManager.cpp  ViewManager.h
src/view/ssd1322/: AlarmsSettingsView.cpp  AlarmsSettingsView.h  CMakeLists.txt  MainClockView.cpp  MainClockView.h
tests/: CMakeLists.txt  bassTest.cpp  displayTest.cpp
